--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
+    "@prisma/client": "^5.14.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.3",
     "heroicons": "^2.1.3",
     "next": "14.2.3",
+    "prisma": "^5.14.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
