--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.14.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.3",
+    "date-fns": "^3.6.0",
     "heroicons": "^2.1.3",
     "next": "14.2.3",
     "prisma": "^5.14.0",
